auto height at artists idea for food design with divs changes to artists name and row

--- a/sites/artists.html
+++ b/sites/artists.html
@@ -31,11 +31,16 @@
                 <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
             </div>
         </a>
+
+        <!-- This is a test row to see if there is another way to implement if the name is to long for the column -->
         <div class="row artist_text"><a href="djs/alesso.html" style="color: #ffffff">
-            <div class="col-xs-2 artist_container"><img src="../img/djs/alesso.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Alesso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            <div class="col-xs-12" style="padding: 0px;">
+            <img src="../img/djs/alesso.jpg" style="height: 80px; float: left;">
+            Alesso and the whole crew in the house<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
         </div>
+
+
         <div class="row artist_text"><a href="djs/aoki.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/aoki.jpg" class="artist_img"/></div>
             <div class="col-xs-10 artist_container">Steve Aoki<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
