--- a/sites/food.html
+++ b/sites/food.html
@@ -34,14 +34,12 @@
     <div class="food_text"> At Electric Love Festival we provide a lot of different kinds of food.
         Exquisite and extraordinary dishes from around the world and
         specialties from the austrian kitchen.</div>
-    <div class="food_slide">
-        <ul style="margin-top: 5px">
-            <li>
-                <div class="inner">
-                    <img src="../img/gallery/gallery%20(1).jpg" class="food_img"/>
-                </div>
-            </li>
-        </ul>
+    <div class="row" style="padding:0px; margin: 0px">
+        <div class="col-xs-6 food_img">Hier foto mit text im photoshop</div>
+        <div class="col-xs-6 food_img">Hier foto mit text im photoshop</div>
+    </div>
+    <div class="row" style="padding: 0px; margin: 0px; margin-top: 15px">
+        <div class="col-xs-12 food_img">Hier foto mit text von Merchandise</div>
     </div>
 
 </div>
