auto height fix

--- a/sites/djs/alesso.html
+++ b/sites/djs/alesso.html
@@ -25,7 +25,7 @@
 
 <body>
 
-<div id="everything" class="content-info" style="padding: 5px">
+<div id="everything" class="content-info" style="padding: 5px; height: auto;">
 
     <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
@@ -35,7 +35,6 @@
 
 
     <div><img src="../../img/djs/alesso_main.jpg" class="img-responsive"></div>
-    <div style="height: auto;">
         <div class="artist_social">
             <span><a href="http://alessoworld.com/home/"><img src="../../img/social/home.gif" class="artist_soc_btn"
                 onmouseover="this.src='../../img/social/home_hover.gif'"
@@ -75,8 +74,6 @@
         </div>
 
     </div>
-
-</div>
 
 </body>
 
