auto height fix

--- a/sites/djs/alesso.html
+++ b/sites/djs/alesso.html
@@ -35,6 +35,7 @@
 
 
     <div><img src="../../img/djs/alesso_main.jpg" class="img-responsive"></div>
+    <div style="height:auto; overflow: scroll">
         <div class="artist_social">
             <span><a href="http://alessoworld.com/home/"><img src="../../img/social/home.gif" class="artist_soc_btn"
                 onmouseover="this.src='../../img/social/home_hover.gif'"
@@ -74,6 +75,7 @@
         </div>
 
     </div>
+</div>
 
 </body>
 
