new: -drinks.html -food.html -merch.html

--- a/sites/gastro.html
+++ b/sites/gastro.html
@@ -31,17 +31,9 @@
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
-    <div class="food_text"> At Electric Love Festival we provide a lot of different kinds of food.
-        Exquisite and extraordinary dishes from around the world and
-        specialties from the austrian kitchen.</div>
-    <div class="row" style="padding:0px; margin: 0px">
-        <div class="col-xs-6 food_img">Hier foto mit text im photoshop</div>
-        <div class="col-xs-6 food_img">Hier foto mit text im photoshop</div>
-    </div>
-    <div class="row" style="padding: 0px; margin: 0px; margin-top: 15px">
-        <div class="col-xs-12 food_img">Hier foto mit text von Merchandise</div>
-    </div>
-
+    <div class="col-xs-12 food_img">Food</div>
+    <div class="col-xs-12 food_img">Drinks</div>
+    <a href="food/merch.html"><div class="col-xs-12 food_img">Merchandise</div></a>
 </div>
 
 </body>
