--- a/sites/gastro.html
+++ b/sites/gastro.html
@@ -33,7 +33,7 @@
     </a>
     <div class="col-xs-12 food_img">Food</div>
     <div class="col-xs-12 food_img">Drinks</div>
-    <a href="food/merch.html"><div class="col-xs-12 food_img">Merchandise</div></a>
+    <a href="food/merch.html"><div class="col-xs-12 food_img"><img src="../img/main/logo_name.gif" /> </div></a>
 </div>
 
 </body>
