--- a/sites/food/merch.html
+++ b/sites/food/merch.html
@@ -31,22 +31,29 @@
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
-    <div class="banner">To buy merchandise products go online to <a href="http://www.electriclove.at/" style="color: white">electriclove.at</a></div>
+    <div class="banner">To buy merchandise products go online to <a href="http://www.electriclove.at/de/merchandise" style="color: white; background-color: #265a88; ">electriclove.at</a></div>
 
-        <div class="col-xs-4 col-md-3 food_img"><div class="merch_text">Snapback</div></div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
+    <div class="container-fluid" style=" overflow: auto; padding: 0px">
 
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
-        <div class="col-xs-4 col-md-3 food_img">Hello</div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/snapback.jpg" class="merch_img food_img" /> <div class="merch_text">Snapback<br>€25,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/felice-cap.jpg" class="merch_img food_img" /> <div class="merch_text">Felice Cap<br>€20,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/trucker-cap.jpg" class="merch_img food_img" /> <div class="merch_text">Trucker Cap<br>€10,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/glasses-lens.jpg" class="merch_img food_img" /> <div class="merch_text">Glasses Lens<br>€4,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/glasses.jpg" class="merch_img food_img" /> <div class="merch_text">Glasses<br>€4,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/hoodie-female.jpg" class="merch_img food_img" /> <div class="merch_text">Hoodie - Female<br>€37,50*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/hoodie-male.jpg" class="merch_img food_img" /> <div class="merch_text">Hoodie - Male<br>€37,50*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/eat-sleep-love-repeat-female.jpg" class="merch_img food_img" /> <div class="merch_text">Eat Sleep <br>Love Repeat<br>€12,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/aphrodite-female.jpg" class="merch_img food_img" /> <div class="merch_text">Aphrodite - <br>Female <br>€12,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/music-on-world-off-male.jpg" class="merch_img food_img" /> <div class="merch_text">Music On Word Off - Male<br>€12,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/eat-sleep-love-repeat-male.jpg" class="merch_img food_img" /> <div class="merch_text">Eat Sleep Love Repeat - Male<br>€12,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/sloganherz-lineup-female.jpg" class="merch_img food_img" /> <div class="merch_text">Sloganheart + Lineup - Female<br>€13,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/blumenherz-female.jpg" class="merch_img food_img" /> <div class="merch_text">Blumenheart - Female<br>€13,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/camouflage-herz-female.jpg" class="merch_img food_img" /> <div class="merch_text">Camouflage Heart - Female<br>€13,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/aphrodite-male.jpg" class="merch_img food_img" /> <div class="merch_text">Aphrodite - Male<br>€13,00*</div></div>
+        <div class="col-xs-4 col-md-3 food_img"><img src="../../img/merch/sloganherz-male.jpg" class="merch_img food_img" /> <div class="merch_text">Sloganheart - Male<br>€13,00*</div></div>
 
+    </div>
+    <div style="float: right;margin: 10px 0px 5px 0px;">* Inkl. MwSt. zzgl. Versandkosten</div>
 </div>
 
 </body>
