titles of faq changed  --> elf Font now installed  --> centerd  --> and link underline deleted

--- a/sites/faqSites/camping.html
+++ b/sites/faqSites/camping.html
@@ -26,9 +26,10 @@
 
     <div id="everything" class="content-info" style="padding: 5px; text-align: center">
 
-        <a href="#" class="js">
-            <div class="header_div" onclick="history.go(-1);return true;">
-                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
+        <a href="" style="text-decoration: none" class="js">
+            <div class="header_div" style="font-family: elfFont; line-height: 40px; font-size: 25px" onclick="history.go(-1);return true;">
+                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+                Camping
             </div>
         </a>
 
