--- a/sites/faqSites/travel.html
+++ b/sites/faqSites/travel.html
@@ -26,13 +26,12 @@
 
 <div id="everything" class="content-info" style="padding: 5px; text-align: center">
 
-    <div class="row" style="padding: 0px; margin: 0px">
-        <div class="col-xs-4 header_back js" onclick="history.go(-1);return true;">
-            <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
+    <a href="" style="text-decoration: none" class="js">
+        <div class="header_div" style="font-family: elfFont; line-height: 40px; font-size: 25px" onclick="history.go(-1);return true;">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+            Travel
         </div>
-        <div class="col-xs-4 header_back header_title" style="text-align: center">TRAVEL</div>
-        <div class="col-xs-4 header_back"></div>
-    </div>
+    </a>
 
     <label class="collapse" for="car">by Car<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="car" type="checkbox">
