--- a/sites/faqSites/tickets.html
+++ b/sites/faqSites/tickets.html
@@ -25,14 +25,13 @@
 
 <div id="everything" class="content-info" style="padding: 5px; text-align: center">
 
-    <div class="row" style="padding: 0px; margin: 0px">
-        <div class="col-xs-4 header_back js" onclick="history.go(-1);return true;">
-            <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
-        </div>
-        <div class="col-xs-4 header_back header_title" style="text-align: center">TICKETS</div>
-        <div class="col-xs-4 header_back"></div>
-    </div>
 
+    <a href="" style="text-decoration: none" class="js">
+        <div class="header_div" style="font-family: elfFont; line-height: 40px; font-size: 25px" onclick="history.go(-1);return true;">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+            Tickets
+        </div>
+    </a>
     <label class="collapse" for="camping">Camping Tickets<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="camping" type="checkbox">
     <div class="text_shown"><p><b>Basic Camping Ticket - North & South</b></p>
