love site in build

--- a/sites/love.html
+++ b/sites/love.html
@@ -31,9 +31,15 @@
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
-    <div class="col-xs-12 food_img">Food</div>
-    <div class="col-xs-12 food_img">Drinks</div>
-    <a href="food/merch.html"><div class="col-xs-12 food_img"><img src="../img/main/logo_name.gif" /> </div></a>
+    <div class="row" style="padding:0px; margin: 0px;">
+        <div class="col-xs-6 love_field">
+            <img src="../img/djs/alesso.jpg" class="love_img">
+            <div class="love_text"></div>
+        </div>
+        <div class="col-xs-6 love_field"><img src="../img/djs/alesso.jpg" class="love_img"></div>
+    </div>
+
+
 </div>
 
 </body>
