styling for love.html

--- a/sites/love.html
+++ b/sites/love.html
@@ -32,11 +32,24 @@
         </div>
     </a>
     <div class="row" style="padding:0px; margin: 0px;">
-        <div class="col-xs-6 love_field">
+        <div class="col-xs-6">
+            <div class="love_field">
+                <img src="../img/djs/alesso.jpg" class="love_img">
+                <div class="love_text"></div>
+            </div>
+        </div>
+        <div class="col-xs-6">
+        <div class="love_field">
             <img src="../img/djs/alesso.jpg" class="love_img">
             <div class="love_text"></div>
         </div>
-        <div class="col-xs-6 love_field"><img src="../img/djs/alesso.jpg" class="love_img"></div>
+    </div>
+    </div>
+    <div class="col-xs-12" style="margin-top: 10px">
+        <div class="love_field">
+            <img src="../img/djs/alesso.jpg" class="love_img">
+            <div class="love_text"></div>
+        </div>
     </div>
 
 
