--- a/sites/love.html
+++ b/sites/love.html
@@ -31,28 +31,36 @@
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
-    <div class="row" style="padding:0px; margin: 0px;">
-        <div class="col-xs-6">
-            <div class="love_field">
-                <img src="../img/djs/alesso.jpg" class="love_img">
-                <div class="love_text"></div>
+
+    <div style="height: auto; width: 100%; ">
+        <div class="row" style="padding:0px; margin: 10px 0px 0px 0px;">
+            <div class="col-xs-6">
+                <a href="gallery.html" style="text-decoration: none">
+                    <div class="love_field">
+                        <img src="../img/djs/alesso.jpg" class="love_img">
+                        <div class="love_text">Gallery</div>
+                    </div>
+                </a>
             </div>
+            <div class="col-xs-6">
+                <a href="countdown.html" style="text-decoration: none;">
+                    <div class="love_field">
+                        <img src="../img/djs/alesso.jpg" class="love_img">
+                        <div class="love_text">Countdown</div>
+                    </div>
+                </a>
         </div>
-        <div class="col-xs-6">
-        <div class="love_field">
-            <img src="../img/djs/alesso.jpg" class="love_img">
-            <div class="love_text"></div>
         </div>
-    </div>
-    </div>
-    <div class="col-xs-12" style="margin-top: 10px">
-        <div class="love_field">
-            <img src="../img/djs/alesso.jpg" class="love_img">
-            <div class="love_text"></div>
+        <div class="col-xs-12">
+            <a href="merch.html" style="text-decoration: none">
+                <div class="love_field">
+                    <img src="../img/djs/alesso.jpg" class="love_img">
+                    <div class="love_text">Merchandise</div>
+                </div>
+            </a>
         </div>
-    </div>
 
-
+    </div>
 </div>
 
 </body>
