merch finished love site changes

--- a/sites/merch.html
+++ b/sites/merch.html
@@ -31,7 +31,7 @@
             <img src="../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
-    <div class="banner">go online to buy: <a href="http://www.electriclove.at/de/merchandise" style="color: white; background-color: #265a88; "><img src="../img/max/" /></a></div>
+    <div class="banner">to purchase products go online:  <a href="http://www.electriclove.at/de/merchandise" style="color: white"><img src="../img/max/shopping.png" style="height: 30px" /></a></div>
 
     <div class="container-fluid" style=" overflow: auto; padding: 0px">
 
