--- a/sites/love.html
+++ b/sites/love.html
@@ -45,7 +45,7 @@
             <div class="col-xs-6">
                 <a href="countdown.html" style="text-decoration: none;">
                     <div class="love_field">
-                        <img src="../img/djs/alesso.jpg" class="love_img">
+                        <img src="../img/djs/alesso.jpg" class="love_img hourglass">
                         <div class="love_text">Countdown</div>
                     </div>
                 </a>
@@ -54,7 +54,7 @@
         <div class="col-xs-12">
             <a href="merch.html" style="text-decoration: none">
                 <div class="love_field">
-                    <img src="../img/djs/alesso.jpg" class="love_img">
+                    <img src="../img/max/shopping.png" class="love_img shopping">
                     <div class="love_text">Merchandise</div>
                 </div>
             </a>
