lot of minor changes --> style and directory system

--- a/sites/faqSites/tickets.html
+++ b/sites/faqSites/tickets.html
@@ -27,7 +27,7 @@
 
 
     <a href="" style="text-decoration: none" class="js">
-        <div class="header_div" style="font-family: elfFont; line-height: 40px; font-size: 25px" onclick="history.go(-1);return true;">
+        <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
             Tickets
         </div>
