--- a/sites/love.html
+++ b/sites/love.html
@@ -19,7 +19,7 @@
 
 
 
-    <title>Electric Love Festival</title>
+    <title>Electric Love Festival - More</title>
 
 </head>
 
@@ -35,7 +35,7 @@
     <div style="height: auto; width: 100%; ">
         <div class="row" style="padding:0px; margin: 10px 0px 0px 0px;">
             <div class="col-xs-6">
-                <a href="gallery.html" style="text-decoration: none">
+                <a href="love/gallery.html" style="text-decoration: none">
                     <div class="love_field">
                         <img src="../img/djs/alesso.jpg" class="love_img">
                         <div class="love_text">Gallery</div>
@@ -43,7 +43,7 @@
                 </a>
             </div>
             <div class="col-xs-6">
-                <a href="countdown.html" style="text-decoration: none;">
+                <a href="love/countdown.html" style="text-decoration: none;">
                     <div class="love_field">
                         <img src="../img/djs/alesso.jpg" class="love_img hourglass">
                         <div class="love_text">Countdown</div>
@@ -52,7 +52,7 @@
         </div>
         </div>
         <div class="col-xs-12">
-            <a href="merch.html" style="text-decoration: none">
+            <a href="love/merch.html" style="text-decoration: none">
                 <div class="love_field">
                     <img src="../img/max/shopping.png" class="love_img shopping">
                     <div class="love_text">Merchandise</div>
