--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/gastro.html"><img class="item_main" src="img/max/food.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/food.html"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
 
         </div>
