--- a/sites/djs/deorro.html
+++ b/sites/djs/deorro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
 
     <!-- Bootstrap init -->
     <script src="../../js/jquery-1.11.2.min.js"></script>
