change of viewport for device height at djs

--- a/sites/djs/alesso.html
+++ b/sites/djs/alesso.html
@@ -25,7 +25,7 @@
 
 <body>
 
-<div id="everything" class="content-info" style="padding: 5px; height: auto;">
+<div id="test" class="content-info" style="padding: 5px; height: auto;">
 
     <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
