--- a/sites/information.html
+++ b/sites/information.html
@@ -36,13 +36,13 @@
             <section id="socialMedia">
                 <h2><a href="#socialMedia">Social Media</a></h2>
                 <p style="font-family: elfFont">Visit us on:</p>
-                <span><a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><img src="../img/max/youtube.gif" class="img_accordion"
+                <span><a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><img src="../img/social/youtube.gif" class="img_accordion"
                       onmouseover="this.src='../img/social/youtube_hover.gif'"
                       onmouseout="this.src='../img/social/youtube.gif'"/></a> </span>
-                <span><a href="https://twitter.com/electricloveaut"><img src="../img/max/twitter.gif" class="img_accordion"
+                <span><a href="https://twitter.com/electricloveaut"><img src="../img/social/twitter.gif" class="img_accordion"
                       onmouseover="this.src='../img/social/twitter_hover.gif'"
                       onmouseout="this.src='../img/social/twitter.gif'"/></a> </span>
-                <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/max/facebook.gif" class="img_accordion"
+                <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/social/facebook.gif" class="img_accordion"
                       onmouseover="this.src='../img/social/facebook_hover.gif'"
                       onmouseout="this.src='../img/social/facebook.gif'"/></a> </span>
             </section>
