--- a/sites/love/merch.html
+++ b/sites/love/merch.html
@@ -26,13 +26,16 @@
 <body>
 
 <div class="content-info" style="padding: 5px; color: #ffffff">
-    <a href="" class="js">
+    <a href="" class="js" style="text-decoration: none">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
             Merchandise
         </div>
     </a>
-    <div class="banner">to purchase products go online:  <a href="http://www.electriclove.at/de/merchandise" style="color: white"><img src="../../img/max/shopping.png" style="height: 30px" /></a></div>
+    <div class="banner">to purchase products go online:  <a href="https://www.facebook.com/electriclovefestival">
+        <img src="../../img/max/shopping.png" style="height: 30px;"
+        onmouseover="this.src='../../img/max/shopping2.png'"
+        onmouseout="this.src='../../img/max/shopping.png'"/></a> </div>
 
     <div class="container-fluid" style=" overflow: auto; padding: 0px">
 
