image slider, gallery test

--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -31,57 +31,19 @@
         </div>
     </a>
 
-    <div class="outer_slide">
-        <ul style="padding: 0px;">
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(1).jpg" class="gallery_height"/>
-                </div>
+    <div class="container">
+        <ul class="row">
+            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+                    <img src="../../img/gallery/gallery%20(1).jpg"/>
             </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(2).jpg" class="gallery_height"/>
-                </div>
+            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+                    <img src="../../img/gallery/gallery%20(2).jpg"/>
             </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(3).jpg" class="gallery_height"/>
-                </div>
+            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+                    <img src="../../img/gallery/gallery%20(3).jpg"/>
             </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(4).jpg" class="gallery_height"/>
-                </div>
-            </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(5).jpg" class="gallery_height"/>
-                </div>
-            </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(6).jpg" class="gallery_height"/>
-                </div>
-            </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(7).jpg" class="gallery_height"/>
-                </div>
-            </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(8).jpg" class="gallery_height"/>
-                </div>
-            </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(9).jpg" class="gallery_height"/>
-                </div>
-            </li>
-            <li>
-                <div class="inner">
-                    <img src="../../img/gallery/gallery%20(10).jpg" class="gallery_height"/>
-                </div>
+            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+                    <img src="../../img/gallery/gallery%20(4).jpg"/>
             </li>
 
 
