--- a/sites/love.html
+++ b/sites/love.html
@@ -35,7 +35,7 @@
     <div style="height: auto; width: 100%; ">
         <div class="row" style="padding:0px; margin: 10px 0px 0px 0px;">
             <div class="col-xs-6">
-                <a href="love/test.html" style="text-decoration: none">
+                <a href="love/gallery.html" style="text-decoration: none">
                     <div class="love_field">
                         <img src="../img/djs/alesso.jpg" class="love_img">
                         <div class="love_text">Gallery</div>
