--- a/sites/love/merch.html
+++ b/sites/love/merch.html
@@ -32,7 +32,7 @@
             Merchandise
         </div>
     </a>
-    <div class="banner">to purchase products go online:  <a href="https://www.facebook.com/electriclovefestival">
+    <div class="banner">to purchase products go online:  <a href="http://www.electriclove.at/en/merchandise">
         <img src="../../img/max/shopping.png" style="height: 30px;"
         onmouseover="this.src='../../img/max/shopping2.png'"
         onmouseout="this.src='../../img/max/shopping.png'"/></a> </div>
