--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -9,6 +9,7 @@
     <script src="../../js/bootstrap.min.js"></script>
     <script src="phonegap.js"></script>
     <script src="../../js/main.js"></script>
+    <script src="../../js/swipe.js"></script>
 
     <!-- Styles init -->
     <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css"/>
@@ -16,6 +17,60 @@
     <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="../../css/styles.css" type="text/css"/>
+
+    <script src="../../js/swipe.js"></script>
+    <script>
+        $(document).ready(function() {
+            Slider = $('#slider').Swipe({
+            }).data('Swipe');
+
+            $('.next').on('click', Slider.next);
+            $('.prev').on('click', Slider.prev);
+        });
+    </script>
+
+    <style>
+        .swipe {
+            overflow: hidden;
+            position: relative;
+            max-width: 600px;
+            width: 100%;
+            height: 350px;
+            margin: 100px auto 0;
+        }
+        .swipe-wrap {
+            overflow: hidden;
+            position: relative;
+        }
+        .swipe-wrap > div {
+            float: left;
+            width: 100%;
+            position: relative;
+        }
+        .swipe .nav {
+            position: absolute;
+            width: 80px;
+            height: 38px;
+            z-index: 10;
+            text-align: center;
+            line-height: 40px;
+            display: inline-block;
+            color: #fff;
+            top: 45%;
+            cursor: pointer;
+            background-color: rgba(0,0,0,0.8)
+        }
+        .swipe .nav.next {
+            right: 0;
+            -webkit-border-radius: 3px 0 0 3px;
+            border-radius: 3px 0 0 3px;
+        }
+        .swipe .nav.prev {
+            left: 0;
+            -webkit-border-radius: 0 3px 3px 0;
+            border-radius: 0 3px 3px 0;
+        }
+    </style>
 
     <title>Electric Love Festival - Gallery</title>
 
@@ -31,27 +86,24 @@
         </div>
     </a>
 
-    <div class="container">
-        <ul class="row">
-            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
-                    <img src="../../img/gallery/gallery%20(1).jpg"/>
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
-                    <img src="../../img/gallery/gallery%20(2).jpg"/>
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
-                    <img src="../../img/gallery/gallery%20(3).jpg"/>
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
-                    <img src="../../img/gallery/gallery%20(4).jpg"/>
-            </li>
-
-
-        </ul>
+    <div class="demo-wrapper">
+        <div id="slider" class="swipe">
+            <div class="swipe-wrap">
+                <div>
+                    <img src="../../img/gallery/gallery%20(1).jpg" width="600" height="350">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(2).jpg" width="600" height="350">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(3).jpg" width="600" height="350">
+                </div>
+            </div>
+            <span class="nav prev">Prev</span>
+            <span class="nav next">Next</span>
+        </div>
     </div>
-
 
 </div>
 </body>
-
 </html>
