--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -23,54 +23,10 @@
         $(document).ready(function() {
             Slider = $('#slider').Swipe({
             }).data('Swipe');
-
             $('.next').on('click', Slider.next);
             $('.prev').on('click', Slider.prev);
         });
     </script>
-
-    <style>
-        .swipe {
-            overflow: hidden;
-            position: relative;
-            max-width: 600px;
-            width: 100%;
-            height: 350px;
-            margin: 100px auto 0;
-        }
-        .swipe-wrap {
-            overflow: hidden;
-            position: relative;
-        }
-        .swipe-wrap > div {
-            float: left;
-            width: 100%;
-            position: relative;
-        }
-        .swipe .nav {
-            position: absolute;
-            width: 80px;
-            height: 38px;
-            z-index: 10;
-            text-align: center;
-            line-height: 40px;
-            display: inline-block;
-            color: #fff;
-            top: 45%;
-            cursor: pointer;
-            background-color: rgba(0,0,0,0.8)
-        }
-        .swipe .nav.next {
-            right: 0;
-            -webkit-border-radius: 3px 0 0 3px;
-            border-radius: 3px 0 0 3px;
-        }
-        .swipe .nav.prev {
-            left: 0;
-            -webkit-border-radius: 0 3px 3px 0;
-            border-radius: 0 3px 3px 0;
-        }
-    </style>
 
     <title>Electric Love Festival - Gallery</title>
 
@@ -90,19 +46,30 @@
         <div id="slider" class="swipe">
             <div class="swipe-wrap">
                 <div>
-                    <img src="../../img/gallery/gallery%20(1).jpg" width="600" height="350">
+                    <img src="../../img/gallery/gallery%20(1).jpg" class="img-responsive">
                 </div>
                 <div>
-                    <img src="../../img/gallery/gallery%20(2).jpg" width="600" height="350">
+                    <img src="../../img/gallery/gallery%20(2).jpg" class="img-responsive">
                 </div>
                 <div>
-                    <img src="../../img/gallery/gallery%20(3).jpg" width="600" height="350">
+                    <img src="../../img/gallery/gallery%20(3).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(4).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(5).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(6).jpg" class="img-responsive">
                 </div>
             </div>
-            <span class="nav prev">Prev</span>
-            <span class="nav next">Next</span>
+
         </div>
     </div>
+    <div class="col-xs-6 nav prev navbutton">Prev</div>
+    <div class="col-xs-6 nav next navbutton">Next</div>
+
 
 </div>
 </body>
