--- a/sites/love.html
+++ b/sites/love.html
@@ -31,36 +31,27 @@
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
-
-    <div style="height: auto; width: 100%; ">
-        <div class="row" style="padding:0px; margin: 10px 0px 0px 0px;">
-            <div class="col-xs-6">
-                <a href="love/gallery.html" style="text-decoration: none">
-                    <div class="love_field">
-                        <img src="../img/djs/alesso.jpg" class="love_img">
-                        <div class="love_text">Gallery</div>
-                    </div>
-                </a>
+    <a href="love/gallery.html" class="alink">
+        <div class="row row_style">
+            <div class="col-xs-6 text_field">
+                Get some look at incredibly photographs of Electric Love Festival 2014
             </div>
-            <div class="col-xs-6">
-                <a href="love/countdown.html" style="text-decoration: none;">
-                    <div class="love_field">
-                        <img src="../img/djs/alesso.jpg" class="love_img hourglass">
-                        <div class="love_text">Countdown</div>
-                    </div>
-                </a>
+            <div class="col-xs-6"><img src="../img/max/shopping.png" class="img-responsive img_field"/></div>
         </div>
+    </a>
+    <a href="love/countdown.html" class="alink">
+        <div class="row row_style">
+            <div class="col-xs-6"><img src="../img/max/shopping.png" class="img-responsive img_field"/></div>
+            <div class="col-xs-6 text_field">Check how long it is until Electric Love Festival 2015 starts!!</div>
         </div>
-        <div class="col-xs-12">
-            <a href="love/merch.html" style="text-decoration: none">
-                <div class="love_field">
-                    <img src="../img/max/shopping.png" class="love_img shopping">
-                    <div class="love_text">Merchandise</div>
-                </div>
-            </a>
+    </a>
+    <a href="love/merch.html" class="alink">
+        <div class="row row_style">
+            <div class="col-xs-6 text_field">Look at our merchandise products. If you want to buy something please go online.</div>
+            <div class="col-xs-6"><img src="../img/max/shopping.png" class="img-responsive img_field"/></div>
         </div>
+    </a>
 
-    </div>
 </div>
 
 </body>
