--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -67,8 +67,8 @@
 
         </div>
     </div>
-    <div class="col-xs-6 nav prev navbutton">Prev</div>
-    <div class="col-xs-6 nav next navbutton">Next</div>
+    <a href="" class="alink"><div class="col-xs-6 nav prev navbutton">Prev</div></a>
+    <a href="" class="alink"><div class="col-xs-6 nav next navbutton">Next</div></a>
 
 
 </div>
