--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -63,6 +63,33 @@
                 <div>
                     <img src="../../img/gallery/gallery%20(6).jpg" class="img-responsive">
                 </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(7).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(8).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(9).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(10).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(11).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(12).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(13).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(14).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(15).jpg" class="img-responsive">
+                </div>
             </div>
 
         </div>
