--- a/sites/love.html
+++ b/sites/love.html
@@ -36,12 +36,12 @@
             <div class="col-xs-6 text_field">
                 Get some look at incredibly photographs of Electric Love Festival 2014
             </div>
-            <div class="col-xs-6"><img src="../img/max/shopping.png" class="img-responsive img_field"/></div>
+            <div class="col-xs-6"><img src="../img/max/gallery.png" class="img-responsive img_field"/></div>
         </div>
     </a>
     <a href="love/countdown.html" class="alink">
         <div class="row row_style">
-            <div class="col-xs-6"><img src="../img/max/shopping.png" class="img-responsive img_field"/></div>
+            <div class="col-xs-6"><img src="../img/max/hourglass.png" class="img-responsive img_field"/></div>
             <div class="col-xs-6 text_field">Check how long it is until Electric Love Festival 2015 starts!!</div>
         </div>
     </a>
