--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -33,70 +33,71 @@
 </head>
 
 <body>
-    <div class="content-info" style="padding: 5px; color: #ffffff">
-        <a href="" class="js" style="text-decoration: none">
-            <div class="header_div" onclick="history.go(-1);return true;">
-                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
-                Gallery
-            </div>
-        </a>
 
-        <div class="demo-wrapper">
-            <div id="slider" class="swipe">
-                <div class="swipe-wrap">
-                    <div>
-                        <img src="../../img/gallery/gallery%20(1).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(2).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(3).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(4).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(5).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(6).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(7).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(8).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(9).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(10).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(11).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(12).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(13).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(14).jpg" class="img-responsive">
-                    </div>
-                    <div>
-                        <img src="../../img/gallery/gallery%20(15).jpg" class="img-responsive">
-                    </div>
-                </div>
-
-            </div>
+<div class="content-info" style="padding: 5px; color: #ffffff">
+    <a href="" class="js" style="text-decoration: none">
+        <div class="header_div" onclick="history.go(-1);return true;">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
+            Gallery
         </div>
-        <a href="" class="alink"><div class="col-xs-6 nav prev navbutton">Prev</div></a>
-        <a href="" class="alink"><div class="col-xs-6 nav next navbutton">Next</div></a>
+    </a>
 
+    <div class="demo-wrapper">
+        <div id="slider" class="swipe">
+            <div class="swipe-wrap">
+                <div>
+                    <img src="../../img/gallery/gallery%20(1).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(2).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(3).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(4).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(5).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(6).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(7).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(8).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(9).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(10).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(11).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(12).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(13).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(14).jpg" class="img-responsive">
+                </div>
+                <div>
+                    <img src="../../img/gallery/gallery%20(15).jpg" class="img-responsive">
+                </div>
+            </div>
 
+        </div>
     </div>
+    <div class="col-xs-6 nav prev navbutton">Prev</div>
+    <div class="col-xs-6 nav next navbutton">Next</div>
+
+
+</div>
 </body>
 </html>
