--- a/sites/love/countdown.html
+++ b/sites/love/countdown.html
@@ -24,9 +24,10 @@
 
 <body>
     <div id="everything" class="content-info ">
-        <a href="../../index.html" class="js">
-            <div class="header_div">
-                <img src="../../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+        <a href="" class="js" style="text-decoration: none">
+            <div class="header_div" onclick="history.go(-1);return true;">
+                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
+                Countdown
             </div>
         </a>
         <img src="../../img/max/clock.gif" class="clock_spinning" style="height: auto; width: 60%; max-width: 400px"/>
