--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -90,7 +90,7 @@
                 <div>
                     <img src="../../img/gallery/gallery%20(15).jpg" class="img-responsive">
                 </div>
-            </div>
+            </div> <!-- Gallery Items-->
 
         </div>
     </div>
