design test for food.html

--- a/sites/food.html
+++ b/sites/food.html
@@ -31,9 +31,31 @@
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
-
-    <div class="container">
-
+    <div class="container-fluid">
+        <div class="row">
+            <a>
+                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
+                </div>
+            </a>
+        </div>
+        <div class="row">
+            <a>
+                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
+                </div>
+            </a>
+        </div>
+        <div class="row">
+            <a>
+                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
+                </div>
+            </a>
+        </div>
+        <div class="row">
+            <a>
+                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
+                </div>
+            </a>
+        </div>
 
     </div>
 
