--- a/sites/love.html
+++ b/sites/love.html
@@ -33,24 +33,25 @@
     </a>
     <a href="love/gallery.html" class="alink">
         <div class="row row_style">
-            <div class="col-xs-6">
-                <div class="text_field">Get some look at incredibly photographs of Electric Love Festival 2014</div>
+            <div class="col-xs-6 outer">
+                    <div class="text_field">Look at incredibly photographs of Electric Love Festival 2014</div>
             </div>
+
             <div class="col-xs-6"><img src="../img/max/gallery.png" class="img-responsive img_field"/></div>
         </div>
     </a>
     <a href="love/countdown.html" class="alink">
         <div class="row row_style">
             <div class="col-xs-6"><img src="../img/max/hourglass.png" class="img-responsive img_field hourglass"/></div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 outer">
                 <div class="text_field">Check how long it is until Electric Love Festival 2015 starts!!</div>
             </div>
         </div>
     </a>
     <a href="love/merch.html" class="alink">
         <div class="row row_style">
-            <div class="col-xs-6">
-                <div class="text_field">Look at our merchandise products. If you want to buy something please go online.</div>
+            <div class="col-xs-6 outer">
+                <div class="text_field">Get yourself exclusive ELF15 merchandise products!</div>
             </div>
             <div class="col-xs-6"><img src="../img/max/shopping.png" class="img-responsive img_field"/></div>
         </div>
