--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/love.html"><img class="item_main spinning" src="img/main/logo_new.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/google.html"><img class="item_main" src="img/max/maps.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row">
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
