--- a/sites/timetable.html
+++ b/sites/timetable.html
@@ -19,31 +19,17 @@
     <link rel="stylesheet" href="../css/normalize.css" type="text/css">
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
 
-    <title>Food and Drinks</title>
+    <title>Timetable</title>
 
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">Back</a>
-        </div>
-        <div>
-            <ul class="nav navbar-tabs">
-                <li role="presentation" class="active"><a href="#">Home</a></li>
-                <li role="presentation"><a href="#">Food</a></li>
-                <li role="presentation"><a href="#">Drinks</a></li>
-                <li role="presentation"><a href="#">Merchandise</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div id="everything" class="container">
-        <div id="timetable" class="element">
-            <div class="row">
-                <div class="col-xs-12">TestColumn</div>
-            </div>
-        </div>
-    </div>
+<ul class="nav nav-tabs timetable_nav">
+    <li role="presentation" class="timetable_element"><a href="#">Wednesday</a></li>
+    <li role="presentation"><a href="#">Thursday</a></li>
+    <li role="presentation"><a href="#">Friday</a></li>
+    <li role="presentation"><a href="#">Saturday</a></li>
+</ul>
 </body>
 
 </html>
