useful design of timetable

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="row" style="margin-bottom: 20px">
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/tt_artist.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/love.html"><img class="item_main spinning" src="img/main/logo_new.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
