--- a/sites/timetable.html
+++ b/sites/timetable.html
@@ -1,73 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Example of Bootstrap 3 Dynamic Tabs</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+
+    <!-- Bootstrap init -->
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="phonegap.js"></script>
+    <script src="../js/main.js"></script>
 
-    <style type="text/css">
-        .bs-example{
-            margin: 20px;
-        }
-    </style>
+    <!-- Styles init -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
+
+
+
+    <title>Electric Love Festival - More</title>
+
 </head>
 
 <body>
-    <div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
-        <a href="../index.html" class="js">
-            <div class="header_div">
-                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
-            </div>
-        </a>
-        <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" class="tt_tab" href="#wednesday">Wednesday</a></li>
-            <li><a data-toggle="tab" class="tt_tab" href="#thursday">Thrusday</a></li>
-            <li><a data-toggle="tab" class="tt_tab" href="#friday">Friday</a></li>
-            <li><a data-toggle="tab" class="tt_tab" href="#saturday">Saturday</a></li>
 
-        </ul>
-        <div class="tab-content">
-            <div id="wednesday" class="tab-pane fade in active">
-                <div class="row_container">
-                    <div class=""><img src="../img/djs/alesso.jpg" class="a_img"></div>
-                        <div class="a_name">Alesso</div>
-                        <hr class="a_hr">
-                        <div class="a_info">20:00</div>
-                        <div class="a_info">Mainstage</div>
-                </div>
-                <div class="row_container">
-                    <div class=""><img src="../img/djs/alesso.jpg" class="a_img"></div>
-                    <div class="a_name">Alesso</div>
-                    <hr class="a_hr">
-                    <div class="a_info">20:00</div>
-                    <div class="a_info">Mainstage</div>
-                </div>
-                <div class="row_container">
-                    <div class=""><img src="../img/djs/alesso.jpg" class="a_img"></div>
-                    <div class="a_name">Alesso</div>
-                    <hr class="a_hr">
-                    <div class="a_info">20:00</div>
-                    <div class="a_info">Mainstage</div>
-                </div>
+<div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
+    <a href="../index.html" class="js">
+        <div class="header_div">
+            <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+        </div>
+    </a>
+    <a href="love/gallery.html" class="alink">
+        <div class="row row_style">
+            <div class="col-xs-6 outer">
+                <div class="text_field">Look at incredibly photographs of Electric Love Festival 2014</div>
             </div>
-            <div id="thursday" class="tab-pane fade">
-                <h3>Section B</h3>
-                <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
-            </div>
-            <div id="friday" class="tab-pane fade">
-                <h3>Dropdown 1</h3>
-                <p>WInteger convallis, nulla in sollicitudin placerat, ligula enim auctor lectus, in mollis diam dolor at lorem. Sed bibendum nibh sit amet dictum feugiat. Vivamus arcu sem, cursus a feugiat ut, iaculis at erat. Donec vehicula at ligula vitae venenatis. Sed nunc nulla, vehicula non porttitor in, pharetra et dolor. Fusce nec velit velit. Pellentesque consectetur eros.</p>
-            </div>
-            <div id="saturday" class="tab-pane fade">
-                <h3>Dropdown 2</h3>
-                <p>Donec vel placerat quam, ut euismod risus. Sed a mi suscipit, elementum sem a, hendrerit velit. Donec at erat magna. Sed dignissim orci nec eleifend egestas. Donec eget mi consequat massa vestibulum laoreet. Mauris et ultrices nulla, malesuada volutpat ante. Fusce ut orci lorem. Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.</p>
+
+            <div class="col-xs-6"><img src="../img/max/gallery.png" class="img-responsive img_field"/></div>
+        </div>
+    </a>
+    <a href="love/countdown.html" class="alink">
+        <div class="row row_style">
+            <div class="col-xs-6"><img src="../img/max/hourglass.png" class="img-responsive img_field hourglass"/></div>
+            <div class="col-xs-6 outer">
+                <div class="text_field">Check how long it is until Electric Love Festival 2015 starts!!</div>
             </div>
         </div>
-    </div>
+    </a>
+</div>
+
 </body>
 
 </html>
