complete redesign timetable new images added new html added

--- a/sites/timetable.html
+++ b/sites/timetable.html
@@ -31,23 +31,28 @@
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
-    <a href="love/gallery.html" class="alink">
-        <div class="row row_style">
-            <div class="col-xs-6 outer">
-                <div class="text_field">Look at incredibly photographs of Electric Love Festival 2014</div>
-            </div>
 
-            <div class="col-xs-6"><img src="../img/max/gallery.png" class="img-responsive img_field"/></div>
-        </div>
-    </a>
-    <a href="love/countdown.html" class="alink">
-        <div class="row row_style">
-            <div class="col-xs-6"><img src="../img/max/hourglass.png" class="img-responsive img_field hourglass"/></div>
-            <div class="col-xs-6 outer">
-                <div class="text_field">Check how long it is until Electric Love Festival 2015 starts!!</div>
+    <div class="tt_info tt_text" style="margin: 10px 10px 0px 10px">Coming up now!</div>
+
+    <div class="tt_row">
+        <div class="col-xs-6" style="padding: 10px">
+            <div class="tt_element">
+                <a href="tt_artist.html" style="text-decoration: none; color:#ffffff">
+                    <div class="tt_text">Artists</div>
+                    <div><img src="../img/max/dj_ohne.png" class="tt_img"></div>
+                </a>
             </div>
         </div>
-    </a>
+        <div class="col-xs-6" style="padding: 10px">
+            <div class="tt_element">
+                <a href="tt_stages.html" style="text-decoration: none; color:#ffffff">
+                    <div class="tt_text">Stages</div>
+                    <div ><img src="../img/max/stages.png" class="tt_img"></div>
+                </a>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 </body>
