--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -8,19 +8,13 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-
-    <style type="text/css">
-        .bs-example{
-            margin: 20px;
-        }
-    </style>
 </head>
 
 <body>
     <div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
         <a href="" style="text-decoration: none" class="js">
-            <div class="header_div" onclick="history.go(-1);return true;">
-                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+            <div class="header_div" onclick="history.go(-1);return true;" style="margin-bottom: 10px">
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                 Artists
             </div>
         </a>
