--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Example of Bootstrap 3 Dynamic Tabs</title>
+    <title>Timetable Artists</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -18,11 +18,11 @@
                 Artists
             </div>
         </a>
-        <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" class="tt_tab" href="#wednesday">WED</a></li>
-            <li><a data-toggle="tab" class="tt_tab" href="#thursday">THU</a></li>
-            <li><a data-toggle="tab" class="tt_tab" href="#friday">FRI</a></li>
-            <li><a data-toggle="tab" class="tt_tab" href="#saturday">SAT</a></li>
+        <ul class="nav nav-pills">
+            <li class="active"><a data-toggle="pill" class="tt_tab" href="#wednesday">WED</a></li>
+            <li><a data-toggle="pill" class="tt_tab" href="#thursday">THU</a></li>
+            <li><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
+            <li><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
 
         </ul>
         <div class="tab-content">
