--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -12,11 +12,31 @@
 
 <body>
     <div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
-        <a href="" style="text-decoration: none" class="js">
+        <a href="" style="text-decoration: none; color: #ffffff" class="js">
             <div class="header_div" onclick="history.go(-1);return true;" style="margin-bottom: 10px">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                 Artists
 
+                <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal" style="float: right; margin-right: 10px; padding: 6px;"><img src="../img/max/shopping.png" style="height: 25px"></a>
+
+                <!-- Modal HTML -->
+                <div id="myModal" class="modal fade">
+                    <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px;">
+                        <div class="modal-content" style="background-color: rgba(110, 110, 110, 1);
+">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Sort by:</h4>
+                            </div>
+                            <div class="modal-body">
+                                <button type="button" class="btn btn-success">Name</button>
+                                <button type="button" class="btn btn-success">Time</button>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </a>
 
