--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -17,7 +17,7 @@
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                 Artists
 
-                <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal" style="float: right; margin-right: 10px; padding: 6px;"><img src="../img/max/shopping.png" style="height: 25px"></a>
+                <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal" style="float: right; margin-right: 10px; padding: 6px; width: 150px"><img src="../img/max/shopping.png" style="height: 25px"></a>
 
                 <!-- Modal HTML -->
                 <div id="myModal" class="modal fade">
